@@ -49,7 +49,7 @@ int main(int argc, char** argv)
 
   if(!udpClient.Connect())
   {
-    std::cout << "Cannot connect to remote peer!" << std::endl;
+    std::cerr << "Cannot connect to remote peer!" << std::endl;
     exit(EXIT_FAILURE);
   }
 
@@ -63,7 +63,7 @@ int main(int argc, char** argv)
 
   if(udpClient.Send(queryStr) == -1)
   {
-    std::cout << "Error while sending data!" << std::endl;
+    std::cerr << "Error while sending data!" << std::endl;
     exit(EXIT_FAILURE);
   }
   
@@ -74,7 +74,7 @@ int main(int argc, char** argv)
   }
   else
   {
-    std::cout << "Error while receiving data!" << std::endl;
+    std::cerr << "Error while receiving data!" << std::endl;
   }
 
   udpClient.Close();
