@@ -66,9 +66,10 @@ namespace Json
           {
             msg = netstring::decode(msg);
           }
-          catch(std::runtime_error e)
+          catch(netstring::NetstringException e)
           {
-            /* error parsing NetString */
+            /* error parsing Netstring */
+            std::cerr << e.what() << std::endl;
             return -1;
           }
         }
