@@ -22,8 +22,6 @@
  * \author Sebastien Vincent
  */
 
-#include <stdexcept>
-
 #include <cppunit/extensions/HelperMacros.h>
 
 #include "../src/netstring.h"
@@ -39,113 +37,113 @@ namespace netstring
     CPPUNIT_TEST_SUITE(netstring::TestNetstring);
     CPPUNIT_TEST(testEncoding);
     CPPUNIT_TEST(testDecoding);
-    CPPUNIT_TEST_EXCEPTION(testDecodingTooLong, std::runtime_error);
-    CPPUNIT_TEST_EXCEPTION(testDecodingTooLongString, std::runtime_error);
-    CPPUNIT_TEST_EXCEPTION(testDecodingTooShort, std::runtime_error);
-    CPPUNIT_TEST_EXCEPTION(testDecodingMissingComma, std::runtime_error);
-    CPPUNIT_TEST_EXCEPTION(testDecodingMissingColon, std::runtime_error);
+    CPPUNIT_TEST_EXCEPTION(testDecodingTooLong, netstring::NetstringException);
+    CPPUNIT_TEST_EXCEPTION(testDecodingTooLongString, netstring::NetstringException);
+    CPPUNIT_TEST_EXCEPTION(testDecodingTooShort, netstring::NetstringException);
+    CPPUNIT_TEST_EXCEPTION(testDecodingMissingComma, netstring::NetstringException);
+    CPPUNIT_TEST_EXCEPTION(testDecodingMissingColon, netstring::NetstringException);
     CPPUNIT_TEST_SUITE_END();
 
     public:
-    /**
-     * \brief Initialize data before launching test.
-     */
-    void setUp()
-    {
-    }
+      /**
+       * \brief Initialize data before launching test.
+       */
+      void setUp()
+      {
+      }
 
-    /**
-     * \brief Cleanup data after test finished.
-     */
-    void tearDown()
-    {
-    }
+      /**
+       * \brief Cleanup data after test finished.
+       */
+      void tearDown()
+      {
+      }
 
-    /**
-     * \brief Test if encoding works as expected.
-     */
-    void testEncoding()
-    {
-      const std::string origStr = "Hello World!";
-      const std::string encodedStr = "12:Hello World!,";
-      std::string str;
+      /**
+       * \brief Test if encoding works as expected.
+       */
+      void testEncoding()
+      {
+        const std::string origStr = "Hello World!";
+        const std::string encodedStr = "12:Hello World!,";
+        std::string str;
 
-      str = netstring::encode(origStr);
-      CPPUNIT_ASSERT(str == encodedStr);
-    }
+        str = netstring::encode(origStr);
+        CPPUNIT_ASSERT(str == encodedStr);
+      }
 
-    /**
-     * \brief Test if decoding works as expected.
-     */
-    void testDecoding()
-    {
-      const std::string origStr = "Hello World!";
-      const std::string encodedStr = "12:Hello World!,";
-      std::string str;
+      /**
+       * \brief Test if decoding works as expected.
+       */
+      void testDecoding()
+      {
+        const std::string origStr = "Hello World!";
+        const std::string encodedStr = "12:Hello World!,";
+        std::string str;
 
-      str = netstring::decode(encodedStr);
-      CPPUNIT_ASSERT(str == origStr);
-    }
+        str = netstring::decode(encodedStr);
+        CPPUNIT_ASSERT(str == origStr);
+      }
 
-    /**
-     * \brief Test if decoding a too long netstring throw
-     * an exception.
-     */
-    void testDecodingTooLong()
-    { 
-      const std::string encodedStr = "13:Hello World!,";
-      std::string str;
+      /**
+       * \brief Test if decoding a too long netstring throw
+       * an exception.
+       */
+      void testDecodingTooLong()
+      { 
+        const std::string encodedStr = "13:Hello World!,";
+        std::string str;
 
-      str = netstring::decode(encodedStr);
-    }
+        str = netstring::decode(encodedStr);
+      }
 
-    /**
-     * \brief Test if decoding a too long string in netstring throw
-     * an exception.
-     */
-    void testDecodingTooLongString()
-    {
-      const std::string encodedStr = "12:Hello World!!!,";
-      std::string str;
+      /**
+       * \brief Test if decoding a too long string in netstring throw
+       * an exception.
+       */
+      void testDecodingTooLongString()
+      {
+        const std::string encodedStr = "12:Hello World!!!,";
+        std::string str;
 
-      str = netstring::decode(encodedStr);
-    }
+        str = netstring::decode(encodedStr);
+      }
 
-    /**
-     * \brief Test if decoding a too short netstring throw
-     * an exception.
-     */
-    void testDecodingTooShort()
-    { 
-      const std::string encodedStr = "11:Hello World!,";
-      std::string str;
+      /**
+       * \brief Test if decoding a too short netstring throw
+       * an exception.
+       */
+      void testDecodingTooShort()
+      { 
+        const std::string encodedStr = "11:Hello World!,";
+        std::string str;
 
-      str = netstring::decode(encodedStr);
-    }
+        str = netstring::decode(encodedStr);
+      }
 
-    /**
-     * \brief Test if decoding netstring which is missing comma throw
-     * an exception.
-     */
-    void testDecodingMissingComma()
-    { 
-      const std::string encodedStr = "12:Hello World!";
-      std::string str;
+      /**
+       * \brief Test if decoding netstring which is missing comma throw
+       * an exception.
+       */
+      void testDecodingMissingComma()
+      { 
+        const std::string encodedStr = "12:Hello World!";
+        std::string str;
 
-      str = netstring::decode(encodedStr);
-    }
+        str = netstring::decode(encodedStr);
+      }
 
-    /**
-     * \brief Test if decoding netstring which is missing colon throw
-     * an exception.
-     */
-    void testDecodingMissingColon()
-    { 
-      const std::string encodedStr = "12Hello World!,";
-      std::string str;
+      /**
+       * \brief Test if decoding netstring which is missing colon throw
+       * an exception.
+       */
+      void testDecodingMissingColon()
+      { 
+        const std::string encodedStr = "12Hello World!,";
+        std::string str;
 
-      str = netstring::decode(encodedStr);
-    }
+        str = netstring::decode(encodedStr);
+      }
   };
 
 } /* namespace netstring */
